--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
         "outDir": "build",
         "sourceMap": true,
         "strict": true,
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true
     },
-    "include": ["src/**/*"]
-}  
+    "include": ["src/**/*"],
+    "exclude": ["node_modules"]
+}
